Changed how db versioning code worked. User db is now v2. Console logs occur when updating user/class db to new version. Fixed issue with ps_locked getting added in the wrong place. Fixed issue with readchangelog code. Added versions of incorrect grade messages for powerschool being locked. Changed language of class info to make it more readable and intuitive. Added weight verification to class info (this comes from custom key in weights storage) Changelog is better now. Like a lot better. New feature with emphasized text. Stays on version after resizing/closing/reopening it. Classes page now shows an exclamation on classes that don't have verified weights. Fixed issue with syncs not showing ps locked. Made fps display slightly larger.

--- a/public/css/dark_mode.css
+++ b/public/css/dark_mode.css
@@ -503,6 +503,11 @@ tr:hover .toolTab {
     border-color: black;
 }
 
+.changelog-inline-setoff {
+    background-color: #333333;
+    box-shadow: black 0 0 2px 1px;
+}
+
 /* Mobile Stuff */
 @media only screen and (max-width: 991px) {
     #table-1 table {
